[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/menus/shop/ShopMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/shop/shop.gd" type="Script" id=2]
[ext_resource path="res://pickups/gold/gold_cube_box001.png" type="Texture" id=3]
[ext_resource path="res://pickups/gold/gold_cube_box002.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.5, 14.5 )

[node name="Shop" type="Node2D" groups=["shop"]]
position = Vector2( 8, 43 )
script = ExtResource( 2 )

[node name="ShopMap" parent="." instance=ExtResource( 1 )]
position = Vector2( 319, 189 )

[node name="ColorRect" parent="ShopMap" index="5"]
margin_left = -598.0
margin_top = -314.0
margin_right = -558.0
margin_bottom = -268.0

[node name="Sprite2" type="Sprite" parent="ShopMap"]
position = Vector2( -171, 71 )
texture = ExtResource( 3 )

[node name="Sprite8" type="Sprite" parent="ShopMap"]
position = Vector2( -135, -88 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="ShopMap"]
position = Vector2( 187, 88 )
texture = ExtResource( 3 )

[node name="Sprite6" type="Sprite" parent="ShopMap"]
position = Vector2( 189, -85 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="ShopMap"]
position = Vector2( 156, 87 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="ShopMap"]
position = Vector2( -138, 88 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="ShopMap"]
position = Vector2( -155, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopMap/Area2D"]
position = Vector2( 163, 86 )
shape = SubResource( 1 )

[node name="PlayerSpawnPoint" type="Position2D" parent="."]
position = Vector2( 321, 186 )

[node name="ItemBoxPositions" type="Node2D" parent="."]

[node name="pos1" type="Position2D" parent="ItemBoxPositions"]
position = Vector2( 228, 99 )

[node name="pos2" type="Position2D" parent="ItemBoxPositions"]
position = Vector2( 322, 99 )

[node name="pos3" type="Position2D" parent="ItemBoxPositions"]
position = Vector2( 412, 100 )

[node name="Items" type="Node2D" parent="."]

[connection signal="area_entered" from="ShopMap/Area2D" to="." method="_on_Area2D_area_entered"]

[editable path="ShopMap"]
